# metheor

./: .bumpversion.cfg  .gitignore  CLAUDE.md  CONDA_BUILD_SETUP.md  Cargo.toml  PARALLEL.md  README.md  metheor  recipe.yaml
.github/workflows/: benchmarks.yml  conda-build.yml  rust.yml
benches/: README.md  data_generator.rs  methylation_benchmarks.rs  methylation_benchmarks_clean.rs  methylation_benchmarks_quiet.rs  parallel_performance.rs  performance_analysis.rs
conda-recipes/: build.sh  meta.yaml
scripts/: setup-hooks.sh  test-conda-build.sh
src/: bamutil.rs  cli.yaml  fdrp.rs  lib.rs  lpmd.rs  main.rs  me.rs  mhl.rs  pdr.rs  pm.rs  progressbar.rs  qfdrp.rs  readutil.rs  tag.rs
tests/: cli_error_handling.rs  fdrp-cli.rs  hg38.chr19.fa.fai  lpmd-cli.rs  me-cli.rs  mhl-cli.rs  out.bam  out.tagged.bam  output_validation.rs  parallel_tests.rs  pdr-cli.rs  pm-cli.rs  qfdrp-cli.rs  tag-cli.rs  test.chr19.metheor_tag_out.sam  test.chr19.noXM.sam  test1.bam  test1.bam.bai  test2.bam  test2.bam.bai  test3.bam  test3.bam.bai  test4.bam  test4.bam.bai  test5.bam  test5.bam.bai  test6.bam  test6.bam.bai  tinyref.fa  tinyref.fa.fai  unit_bamutil.rs  unit_core_algorithms.rs  unit_progressbar.rs
