[package]
name = "metheor"
version = "0.1.9"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
itertools = "0.10.2"
rust-htslib = { version = "0.50.0", default-features = false }
bio-types = "0.12.1"
# noodles = { version = "0.6.0", features = ["bam"] }
csv = "1.1"
indicatif = "0.17"
clap = { version = "4.0", features = ["derive"] }
interval-tree = { git = "https://github.com/zaeleus/interval-tree.git", tag = "v0.2.0" }

[dev-dependencies]
assert_cmd = "2.0.8"
predicates = "2.1.5"
md5 = "0.7.0"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"

[[bench]]
name = "methylation_benchmarks"
harness = false